[workspace]
members = [".", "crates/*"]

[workspace.package]
version = "3.0.0+4"
edition = "2024"
description = "A framework for saving and loading application state in Bevy."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hankjordan/bevy_save"
rust-version = "1.85.0"

[package]
name = "bevy_save"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

[lints.clippy]
uninlined_format_args = "allow"

[features]
default = [
    "reflect",
    "checkpoints",
    "log",
    "bevy_asset",
    "bevy_render",
    "bevy_sprite",
]
reflect = ["bevy/bevy_scene"]
checkpoints = ["reflect"]
log = ["bevy/bevy_log"]
bevy_asset = ["bevy/bevy_asset"]
bevy_render = ["bevy/bevy_render"]
bevy_sprite = ["bevy/bevy_sprite"]
brotli = ["dep:brotli"]

[workspace.dependencies]
bevy = { path = "../../bevy_engine", default-features = false }
bevy_macro_utils = {path = "../../bevy_engine/crates/bevy_macro_utils"}
bevy_save_macros = { version = "3.0.0", path = "crates/bevy_save_macros" }
variadics_please = { version = "1.1" }

[dependencies]
bevy.workspace = true
bevy_save_macros.workspace = true
variadics_please.workspace = true
rmp-serde = "1.3"
serde_json = "1.0"
serde = "1.0"
platform-dirs = "0.3"
thiserror = "2.0"
semver = "1.0"
brotli = { version = "8.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
smol = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy.workspace = true
web-sys = { version = "0.3", default-features = false, features = [
    "Storage",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
fragile = "2.0"
uuid = { version = "1.16", features = ["js"] }

[dev-dependencies]
bevy-inspector-egui = { path = "../bevy_inspector_egui/crates/bevy-inspector-egui" }
ron = "0.10.1"
bevy = { workspace = true, default-features = true, features = ["serialize"] }
bevy_egui = "0.36"
anyhow = "1.0"
postcard = { version = "1.1", features = ["use-std"] }
io-adapters = "0.4"
